# burble

./: .envrc  .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  .guix-channel  .hypatia-ignore  .pre-commit-config.yaml  0-AI-MANIFEST.a2ml  BURBLE-PROOF-STATUS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Containerfile  EXPLAINME.adoc  GOVERNANCE.adoc  Justfile  PROOF-NEEDS.md  READINESS.adoc  README.adoc  README.md  ROADMAP.adoc  SECURITY.md  TEST-NEEDS.md  TOPOLOGY.md  burble-launcher.sh  burble.launcher.a2ml  config.yaml  eclexiaiser.toml  flake.nix  guix.scm  k9iser.toml  llm-warmup-dev.md  llm-warmup-user.md  run.sh  setup.ps1  setup.sh  show-logs.sh  stapeln.toml  tlaiser.toml  (+1 more)
.devcontainer/: Containerfile  README.adoc  devcontainer.json
.github/: GOVERNANCE.md  MAINTAINERS  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  custom.yml  documentation.yml  feature_request.yml  question.yml
.github/workflows/: affinescript-canary.yml  casket-pages.yml  codeql.yml  dogfood-gate.yml  elixir-ci.yml  governance.yml  hypatia-scan.yml  install-roundtrip.yml  install-tests.yml  instant-sync.yml  mirror.yml  no-js-scan.yml  publish-verisimdb.yml  push-email-notify.yml  release.yml  (+8 more)
.hypatia/: dangerous-patterns-scan.json  root-hygiene-scan.json  security-and-branch-hygiene.json
.machine_readable/: 0-AI-MANIFEST.a2ml  ADJUST.contractile  CLADE.a2ml  ENSAID_CONFIG.a2ml  INTENT.contractile  MUST.contractile  TRUST.contractile
.well-known/: humans.txt  security.txt
_site/: index.html
admin/: README.adoc  deno.json  gossamer.conf.json
brand/: BRAND.adoc  MESSAGING.adoc
client/: README.adoc
container/: .gatekeeper.yaml  Containerfile  README.adoc  compose.toml  ct-build.sh  deploy.k9.ncl  entrypoint.sh  manifest.toml  vordr.toml
containers/: Containerfile.server  Containerfile.web  README.adoc  compose.toml  coturn.conf  nginx-default-disabled.conf  nginx.conf  selur-compose.toml
dev-notes/: 2026-07-08-indieweb-outreach-message.md  2026-07-08-messaging-pain-to-relief-lens.md  2026-07-09-echidna-cross-prover-alignment-working-case.md
docs/: AI-CHANNEL-PROTOCOL.json  DESIGN-DECISIONS.md  EPHAPAX-OPPORTUNITIES.md  INDEX.adoc  LLM-SERVICE.md  PERMISSIONS-AND-MONITORING.md  PRODUCTION-BLOCKER-HANDOFF.adoc  PROTOCOL.md  README.adoc  RSR_OUTLINE.adoc  SECURITY-DEPLOY.md  TPCF-BURBLE.adoc  tech-debt-2026-05-26.md
examples/: SafeDOMExample.affine
ffi/: README.adoc
scripts/: README.adoc  burble-launcher.sh.deprecated-2026-04-10  cf-bolt-dns.sh  cf-ddns.sh  cf-worker-deploy.sh  check-bolt-reachability.sh  docker-to-podman-image.sh  ensure-msquic-version.sh  ensure-quicer-prereqs.sh  gen-bolt-cert.sh  install-desktop.sh  install-service.sh  mikrotik-bolt-nat.sh  smoke-check.sh  wsl-bolt-udp-forward.ps1
server/: README.adoc  mix.exs
signaling/: README.adoc  relay.js  worker.js
site/: index.md
src/: ABI.idr
templates/: default.html  modern.css
tests/: README.adoc
tools/selur-compose/: .gitignore  0-AI-MANIFEST.a2ml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Containerfile  Justfile  MAINTAINERS.adoc  README.adoc  dist-workspace.toml  flake.nix  manifest.scm
tools/selur-compose/.github/workflows/: ci.yml  release.yml
tools/selur-compose/crates/selur-compose/: Cargo.toml
tools/selur-compose/crates/selur-compose-driver/: Cargo.toml
tools/selur-compose/crates/selur-compose-driver/src/: argv.rs  exec.rs  executor.rs  healthcheck.rs  lib.rs  logs.rs  mock.rs  podman.rs
tools/selur-compose/crates/selur-compose-interp/: Cargo.toml
tools/selur-compose/crates/selur-compose-interp/src/: env.rs  error.rs  expander.rs  grammar.md  lexer.rs  lib.rs  visit.rs
tools/selur-compose/crates/selur-compose-interp/tests/: dotenv.rs  expand.rs  interp.rs
tools/selur-compose/crates/selur-compose-interp/tests/fixtures/: coturn_shell_passthrough.toml
tools/selur-compose/crates/selur-compose-interp/tests/snapshots/: interp__burble_legacy_coturn_env_default.snap  interp__burble_selur_server_env_controlled.snap  interp__burble_selur_server_env_default.snap  interp__coturn_passthrough_command.snap
tools/selur-compose/crates/selur-compose-plan/: Cargo.toml
tools/selur-compose/crates/selur-compose-plan/src/: dag.rs  hash.rs  lib.rs  profiles.rs
tools/selur-compose/crates/selur-compose-plan/tests/: cycles.rs  plan_snapshots.rs
tools/selur-compose/crates/selur-compose-plan/tests/snapshots/: plan_snapshots__boj_server.snap  plan_snapshots__burble_legacy.snap  plan_snapshots__burble_selur.snap
tools/selur-compose/crates/selur-compose-schema/: Cargo.toml
tools/selur-compose/crates/selur-compose-schema/src/: build.rs  depends_on.rs  error.rs  healthcheck.rs  lib.rs  networks.rs  ports.rs  secrets.rs  services.rs  volumes.rs
tools/selur-compose/crates/selur-compose-schema/tests/: error_cases.rs  fuzz.proptest-regressions  fuzz.rs  parse_snapshots.rs  round_trip.rs
tools/selur-compose/crates/selur-compose-schema/tests/fixtures/invalid/: bad_duration.toml  bad_port.toml  cycle_in_depends_on.toml  missing_image_or_build.toml  unknown_field.toml
tools/selur-compose/crates/selur-compose-schema/tests/fixtures/valid/: boj-server.toml  burble-legacy.toml  burble-selur.toml
tools/selur-compose/crates/selur-compose-schema/tests/snapshots/: parse_snapshots__boj_server.snap  parse_snapshots__burble_legacy.snap  parse_snapshots__burble_selur.snap
tools/selur-compose/crates/selur-compose/src/: cli.rs  load.rs  main.rs  output.rs
tools/selur-compose/crates/selur-compose/src/cmd/: build.rs  config.rs  down.rs  logs.rs  mod.rs  ps.rs  pull.rs  up.rs  version.rs
tools/selur-compose/crates/selur-compose/tests/: cli_smoke.rs
tools/selur-compose/docs/: cli-json-schema.adoc  compose-dialect.adoc  release.adoc  v0.2-roadmap.adoc
tools/selur-compose/tests/fixtures/: coturn_shell_passthrough.toml
verification/: README.adoc
(+474 files in other folders)
