[package]
name         = "selur-compose-driver"
description  = "Podman CLI driver and Driver trait for selur-compose."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true

[dependencies]
selur-compose-schema = { path = "../selur-compose-schema", version = "0.1.0" }
selur-compose-plan   = { path = "../selur-compose-plan", version = "0.1.0" }
tokio                = { workspace = true }
async-trait          = { workspace = true }
futures              = { workspace = true }
serde                = { workspace = true }
serde_json           = { workspace = true }
thiserror            = { workspace = true }

[dev-dependencies]
insta = { workspace = true }

[features]
podman-it = []
