[package]
name         = "selur-compose-schema"
description  = "TOML compose schema types (serde structs/enums). No I/O."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true

[dependencies]
serde           = { workspace = true }
serde_json      = { workspace = true }
toml            = { workspace = true }
thiserror       = { workspace = true }
humantime-serde = { workspace = true }
humantime       = { workspace = true }
strsim          = { workspace = true }

[dev-dependencies]
insta    = { workspace = true }
proptest = { workspace = true }
rstest   = { workspace = true }
serde_json = { workspace = true }
